新增機械狼通靈師與狼美騎士兩個板子
內容：新增機械狼、通靈師、狼美人、騎士四個角色與兩份板子 JSON。夜晚結算
      擴充：狼美人魅惑與殉情、通靈師查真實身分、機械狼學習（整局一次、
      隔夜生效）與學到各身分的規則 —— 學到守衛可反彈毒藥、學到女巫只拿
      得到毒藥、學到狼人在帶刀那晚多砍一刀（雙刀集中破盾，守與救皆失效）、
      學到槍牌只有吃刀吃推能開槍。夜晚流程改為機械狼每晚睜眼兩次（開頭給
      開刀手勢並行動、結尾聽身分與開槍手勢）；角色全滅的步驟一律走過場不
      再跳過，避免玩家從流程長度推斷出局者。新增 7 個規則旗標與 84 筆測試
      （共 163 筆）。騎士決鬥屬白天技能，待白天流程完成後才會串接。
      另更新 CLAUDE.md 開發環境記載：工具鏈已於本機重建於 H:（Flutter
      3.47.4、Temurin JDK 21、cmdline-tools 23，未安裝 Android Studio）。
AI 協助：Claude Code（範圍：產生角色定義、板子 JSON、夜晚結算與流程邏輯、測試）
審閱：dark.lin（已審閱並修改）

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>